# deploy

./: .bumpversion.cfg  DIEGIMAS.md  INSTALL.md  README.rst  docker-compose-local.yml  docker-compose.yml  install.sh  update.sh  version.yml
.github/: retag_push_ext_images.sh
.github/workflows/: build.yml
api/: .bumpversion.toml  pyproject.toml
api/docker/: container-init.sh
api/tests/: test_rasenmaeher_api.py
battlelog/: .bumpversion.toml  .env_example  Dockerfile  README.md  container-init.sh  entrypoint.sh
battlelog/backend/: app.js  index.js  package.json
cfssl/: .bumpversion.toml  .gitignore  .secrets.baseline  AGENTS.md  Dockerfile  README.rst  docker-compose.yml  pyproject.toml
cfssl/.github/workflows/: pull_request.yml  push_to_main.yml
cfssl/files/: cfssl-init.sh  cfssl-start.sh  container-env.sh  ocsp-start.sh
cfssl/files/opt/cfssl/template/goose/: db.json
cfssl/src/ocsprest/: __init__.py  config.py  helpers.py  routes.py
cfssl/src/ocsprest/console/: fakessl.py  ocsprest.py
cfssl/tests/: conftest.py  test_ocsprest.py
docs/releases/: 2.10.0.md  2.8.1.md  2.9.0.md  2.9.1.md  2.9.2.md
fpintegration/: .bumpversion.cfg  AGENTS.md  Dockerfile  README.rst  pyproject.toml
fpintegration/tests/: test_rmfpapi.py
keycloak/: .bumpversion.toml  Dockerfile  README.rst
keycloak/openldap/: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  docker-compose-local.yml
matrixrmapi/: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  Dockerfile  README.rst  pyproject.toml  release-please-config.json  tox.ini
matrixrmapi/tests/: conftest.py  test_app.py  test_fragment.py  test_matrixrmapi.py  test_synapse_admin.py
matrixrmapi/ui/: eslint.config.cjs  package.json  pnpm-lock.yaml
miniwerk/: .bumpversion.toml  Dockerfile  pyproject.toml
miniwerk/tests/: test_config.py  test_console.py  test_manifests.py  test_miniwerk.py
mtxauthz/: .bumpversion.toml  .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Dockerfile_pycharm  README.rst  pyproject.toml  tox.ini
mtxauthz/.github/workflows/: pull_request.yml  push_to_main.yml
mtxauthz/docker/: entrypoint-dev.sh  entrypoint-test.sh
mtxauthz/src/rmmtxauthz/: __init__.py  config.py  console.py  mediamtx.py
mtxauthz/src/rmmtxauthz/db/: base.py  dbinit.py  engine.py  errors.py  product.py  user.py
mtxauthz/src/rmmtxauthz/schema/: interop.py  mediamtx.py  userdirect.py
mtxauthz/src/rmmtxauthz/web/: application.py  description.py  health.py  instructions.py  interop.py  mediamtx.py  usercrud.py  userdirect.py  userproxy.py
mtxauthz/tests/: conftest.py  docker-compose.yml  mediamtx.yml  test_mediamtx.py  test_rmmtxauthz.py  test_usercrud.py  test_userdirect.py  test_userproxy.py
mtxauthz/ui/: eslint.config.cjs  package.json  pnpm-lock.yaml
mtxauthz/ui/src/: App.tsx  index.css  main.tsx
mtxauthz/ui/src/components/: BroadcastWizard.tsx  ConnectionOptionsDialog.tsx  OnboardingHandler.tsx  StreamCard.tsx
mtxauthz/ui/src/hooks/: use-mobile.tsx  useCredentials.ts  useSrtPasswords.ts  useStreams.ts
mtxauthz/ui/src/hooks/useStreamPackages/: index.ts  packages.ts
mtxauthz/ui/src/lib/: api.ts  clipboard.ts  metadata.tsx  stream-utils.ts
mtxauthz/ui/src/locales/: en.json  fi.json  sv.json
mtxauthz/ui/src/model/: stream-config.ts
mtxauthz/ui/src/pages/: StreamGridPage.tsx  VideoPage.tsx
nginx/: Dockerfile
nginx/templates_consolidated/: default.conf.template
pg_init/: 03_tak.sh
takintegration/: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  Dockerfile  README.rst  eslint.config.js  pyproject.toml  tox.ini
takintegration/.github/workflows/: pull_request.yml  push_to_main.yml
takintegration/docker/: entrypoint-test.sh
takintegration/src/takrmapi/: __init__.py  app.py
takintegration/src/takrmapi/api/: description.py  tak_missionpackage.py
takintegration/src/takrmapi/takutils/: env_helpers.py  tak_helpers.py  tak_init.py  tak_pkg_helpers.py  tak_pkg_vars.py  tak_rest_helpers.py
takintegration/src/takrmapi/templates/tak_datapackage/default/environment-packages/ATAK-default-settings/: TAK_defaults.pref
takintegration/tests/: test_env_helpers.py  test_takrmapi.py
takintegration/ui/: eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
takintegration/ui/src/: App.tsx  index.css  main.tsx
takintegration/ui/src/components/: InstructionWizard.tsx
takintegration/ui/src/components/instructions/android/: AndroidPhase1.tsx  AndroidPhase2.tsx  AndroidPhase3.tsx  AndroidPhase4.tsx  AndroidPhase5.tsx
takintegration/ui/src/components/instructions/ios/: IosPhase1.tsx  IosPhase2.tsx  IosPhase3.tsx  IosPhase4.tsx  IosPhase5.tsx
takintegration/ui/src/components/instructions/onboarding/: OnboardingHandler.tsx
takintegration/ui/src/components/instructions/windows/: WindowsPhase1.tsx  WindowsPhase2.tsx  WindowsPhase3.tsx  WindowsPhase4.tsx
takintegration/ui/src/components/routes/: AndroidInstructionPage.tsx  AndroidPhasePage.tsx  HomePage.tsx  IosInstructionPage.tsx  IosPhasePage.tsx  WindowsInstructionPage.tsx  WindowsPhasePage.tsx
takintegration/ui/src/components/tabs/: AndroidTab.tsx  IosTab.tsx  TrackerTab.tsx  WindowsTab.tsx
takintegration/ui/src/hooks/: use-metadata.tsx
takintegration/ui/src/hooks/auth/: useUserType.tsx
takintegration/ui/src/lib/: data.tsx  detectPlatform.ts
takserver/: .gitignore  .gitmodules  DIEGIMAS.md  Dockerfile  INSTALL.md  Makefile  README.md  docker-compose.host.yml  docker-compose.yml  generate_user.sh  install.sh  takserver.env.example  update.sh
takserver/scripts/: delete_user.sh  disable_admin.sh  enable_admin.sh  enable_user.sh  firstrun.sh  firstrun_rm.sh  generate_service_cert.sh  makeCert.sh  make_client_zip.sh  serve_packages.py  start-tak.sh  takdb_base.sql
takserver/templates/: CoreConfig.tpl  logback-stdout.xml
tests/: test_cryptpad_integration_files.py
tests/testscenarios/: test_cert_bundle.py
(+58 files in other folders)
