[project]
name = "ocsprest"
version = "1.0.7+260612"
description = ""
authors = [{name = "Eero af Heurlin", email = "eero.afheurlin@iki.fi"}]
readme = "README.rst"
requires-python = ">=3.11,<4.0"
dependencies = [
    "aiohttp[speedups]>=3.8,<4.0",
    "pydantic-settings>=2.0,<3.0",
    "libadvian>=1.6,<2.0",
    "click>=8.0,<9.0",
    "cryptography>=44.0,<45.0",
    "gunicorn>=23.0,<24.0",
    "uvicorn[standard]>=0.34,<1.0",
    "fastapi>=0.89,<1.0",
    "libpvarki>=2.2.0",
]

[[tool.uv.index]]
name = "nexuslocal"
url = "https://nexus.dev.pvarki.fi/repository/pypilocal/simple/"
explicit = true

[tool.uv.sources]
libpvarki = { index = "nexuslocal" }

[project.scripts]
fakessl = "ocsprest.console.fakessl:fakessl_cli"
ocsprest = "ocsprest.console.ocsprest:ocsprest_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ocsprest"]

[dependency-groups]
dev = [
    "pytest>=7.4,<8.0",
    "coverage>=7.3,<8.0",
    "pytest-cov>=4.1,<5.0",
    "bandit>=1.8,<2.0",
    "mypy>=1.15,<2.0",
    "prek>=0.2,<1.0",
    "pytest-asyncio>=0.21,<1.0",
    "bump-my-version>=1.2,<2.0",
    "detect-secrets>=1.2,<2.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.15.12",
]

[tool.black]
line-length = 120
target-version = ['py38']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  |  __pycache__
)
'''

[tool.mypy]
strict=true

[[tool.mypy.overrides]]
module="tests"
disallow_untyped_decorators=false

[tool.pytest.ini_options]
junit_family="xunit2"
addopts="--cov=ocsprest --cov-fail-under=15 --cov-branch"
asyncio_mode="strict"

[tool.coverage.run]
omit = ["tests/*"]
branch = true
