[project]
name = "rmmtxauthz"
version = "1.6.1+260612"
description = "Do HTTP based authz for MediaMTX"
authors = [{ name = "Eero af Heurlin", email = "eero.afheurlin@iki.fi" }]
license = "MIT"
readme = "README.rst"
requires-python = ">=3.11,<4.0"
dependencies = [
    "libadvian>=1.4,<2.0",
    "click>=8.1,<9.0",
    "pydantic>=2.10,<3.0",
    "sqlmodel>=0.0.24,<1.0",
    "gunicorn>=23.0,<24.0",
    "uvicorn[standard]>=0.34,<1.0",
    "fastapi>=0.115,<1.0",
    "pydantic-settings>=2.8,<3.0",
    "pydantic-collections>=0.6.0,<1.0",
    "filelock>=3.17,<4.0",
    "psycopg2-binary>=2.9,<3.0",
    "libpvarki>=2.2,<3.0",
    "aiohttp>=3.12,<4.0",
]

[project.urls]
homepage = "https://github.com/pvarki/python-mediamtx-rmmtxauthz"
repository = "https://github.com/pvarki/python-mediamtx-rmmtxauthz"

[project.scripts]
rmmtxauthz = "rmmtxauthz.console:rmmtxauthz_cli"

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "coverage>=7.4,<8.0",
    "pytest-cov>=4.1,<5.0",
    "black>=25.1,<26.0",
    "bandit>=1.8,<2.0",
    "mypy>=1.15,<2.0",
    "prek>=0.2,<1.0",
    "pytest-asyncio>=0.21,<1.0",
    "bump-my-version>=1.2,<2.0",
    "detect-secrets>=1.5,<2.0",
    "pytest-docker>=3.2,<4.0",
    "httpx>=0.28.1,<1.0",
    "tox>=4.0,<5.0",
    "tox-uv>=1.0,<2.0",
    "ruff>=0.15.12",
    "pre-commit>=4.6,<5.0",
]

[[tool.uv.index]]
name = "nexuslocal"
url = "https://nexus.dev.pvarki.fi/repository/pypilocal/simple"
explicit = true

[tool.uv.sources]
libpvarki = { index = "nexuslocal" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rmmtxauthz"]

[tool.black]
line-length = 120
target-version = ['py311']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  |  __pycache__
)
'''

[tool.mypy]
strict=true

[tool.pytest.ini_options]
junit_family="xunit2"
addopts="--cov=rmmtxauthz --cov-fail-under=65 --cov-branch"
asyncio_mode="strict"

[tool.coverage.run]
omit = ["tests/*"]
branch = true
