[project]
name = "takrmapi"
version = "1.13.1+260612"
description = "RASENMAEHER integration API for TAK server"
authors = [
    { name = "Eero af Heurlin", email = "rambo@iki.fi" },
    { name = "Ari Karhunen", email = "FIXME@example.com" },
]
license = "MIT"
readme = "README.rst"
requires-python = ">=3.11,<4.0"
dependencies = [
    "libadvian>=1.4,<2.0",
    "libpvarki>=2.2,<3.0",
    "fastapi>=0.89,<1.0,!=0.99.0",
    "jinja2>=3.1,<4.0",
    "uvicorn[standard]>=0.30,<1.0",
    "gunicorn>=23.0,<24.0",
    "filelock>=3.12,<4.0",
]

[project.urls]
homepage = "https://github.com/pvarki/python-tak-rmapi"
repository = "https://github.com/pvarki/python-tak-rmapi"

[project.scripts]
takrmapi = "takrmapi.console:takrmapi_cli"

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "coverage>=7.4,<8.0",
    "pytest-cov>=4.1,<5.0",
    "ruff>=0.14,<1.0",
    "bandit>=1.9,<2.0",
    "mypy>=1.8,<2.0",
    "prek>=0.3.9,<0.3.10",
    "pytest-asyncio>=0.21,<1.0",
    "bump-my-version>=1.2,<2.0",
    "detect-secrets>=1.4,<2.0",
    "httpx>=0.23,<1.0",
    "wrapt>=1.15,<2.0",
    "tox>=4.0,<5.0",
    "tox-uv>=1.0,<2.0",
    "pre-commit>=4.6,<5.0",
]

[[tool.uv.index]]
name = "nexuslocal"
url = "https://nexus.dev.pvarki.fi/repository/pypilocal/simple"
explicit = true

[tool.uv.sources]
libpvarki = { index = "nexuslocal" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/takrmapi"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
strict=true

[[tool.mypy.overrides]]
module="tests"
disallow_untyped_decorators=false

[tool.pytest.ini_options]
junit_family="xunit2"
addopts="--cov=takrmapi --cov-fail-under=25 --cov-branch"
asyncio_mode="strict"

[tool.coverage.run]
omit = ["tests/*"]
branch = true
